buy, after, about, contact

--- a/src/components/Property/Property.scss
+++ b/src/components/Property/Property.scss
@@ -1,17 +1,6 @@
 @import "../../sass/base";
-@import "../../sass/typography";
 
-.homes {
-    grid-column: center-start / center-end;
-    margin: 15rem 0;
-
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
-    grid-row: 5 / 6;
-    gap: 7rem;
-}
-
-.home {
+.property {
     background-color: $color-grey-light-1;
 
     display: grid;
