--- a/src/sections/HeaderSection/HeaderSection.scss
+++ b/src/sections/HeaderSection/HeaderSection.scss
@@ -1,7 +1,7 @@
 @import "../../sass/base";
 @import "../../sass/typography";
 
-.section-header {
+.header {
     position: relative;
     display: grid;
 
@@ -10,27 +10,14 @@
     grid-template-columns: [sidebar-start] 8rem [sidebar-end full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem)[col-end])[center-end] minmax(6rem, 1fr) [full-end];
     grid-row: 1 / 2;
     grid-column: 1 / full-end;
-    row-gap: 1.5rem;
-    // @media only screen and(max-width: $bp-medium) {
-    //     grid-column: 1 / -1;
-    // }
-
-    // @media only screen and(max-width: $bp-small) {
-    //     padding: 5rem;
-    // }
-
-}
-
-.header {
-    grid-template-columns: minmax(min-content, max-content);
 
     &__content {
         display: grid;
         position: relative;
         grid-column: 2 / 10;
+        grid-row: 2 / 3;
         grid-template-rows: minmax(4rem, min-content) minmax(30rem, min-content) minmax(5rem, min-content) 1fr;
         padding: 7.5rem 8rem 4rem 8rem;
-        top: -2.1vh;
         background-color: rgba(16, 29, 44, .6);
     }
 
@@ -74,13 +61,13 @@
 }
 
 .bg-video {
-    position: absolute;
-    top: -6.2rem;
+    top: -8.4vh;
     left: 0;
     width: 100%;
     z-index: -1;
     overflow: hidden;
-    grid-row: 1 / 2;
+    grid-row: 1 / 3;
+    grid-column: 1 / 12;
 
     &__content {
         height: 100%;
