--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -4,11 +4,49 @@
 .sidebar {
     background-color: $color-primary;
     z-index: 2;
-    grid-column: 1 / 2;
-    grid-row: 1 / -1;
-
+    position: fixed;
+    height: 100vh;
+    width: 8rem;
+    padding: 0rem 1.5rem;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+
+    .logo {
+        height: 5rem;
+        margin: 2rem 0;
+        align-content: center;
+    }
+
+    &__icons::before {
+        content: '';
+        width: 50%;
+        border-bottom: solid 2px $color-secondary;
+        position: absolute;
+        margin: 0 2rem;
+        left: 0;
+        top: 12vh;
+        z-index: 1;
+    }
+
+    &__icons {
+        font-size: 2.5rem;
+        text-align: center;
+        margin-top: 2rem;
+
+        .icon {
+            display: block;
+            color: $color-secondary;
+            height: 5.5rem;
+            width: 100%;
+        }
+
+        :nth-child(6) {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+        }
+
+    }
 
     @media only screen and(max-width: $bp-large) {
         grid-column: 1 / -1;
@@ -16,7 +54,6 @@
         justify-content: flex-end;
         align-items: center;
     }
-
 }
 
 .nav-btn {
