--- a/src/pages/ContactUs/ContactUs.scss
+++ b/src/pages/ContactUs/ContactUs.scss
@@ -25,7 +25,7 @@
     }
 
     &--content {
-        padding-top: 10rem;
+        padding: 5rem 5rem 5rem 13rem;
         background-color: $color-secondary;
 
         h2 {
@@ -38,8 +38,9 @@
 }
 
 .form {
-    padding-left: 20rem;
     color: $color-primary;
+    border: solid 1px $color-primary;
+    padding: 3rem;
 
     .col-3 {
         width: 31%;
@@ -51,20 +52,30 @@
         display: inline-block;
     }
 
-    &__group:not(:last-child) {
-        margin-bottom: 1.25rem;
+    .col-12 {
+        width: 96.2%;
     }
+
+    .select {
+        position: relative;
+        top: -4.3rem;
+    }
+
+    &__group:not(:last-child) {
+        margin: 0.5rem 1rem;
+    }
+
 
     &__input {
         font-size: 1.5rem;
         font-family: inherit;
         color: inherit;
-        padding: 1.5rem 2rem;
+        padding: 1.5rem 1.5rem;
         border-radius: 2px;
         background-color: $color-grey-light-1;
         border: none;
-        border-bottom: 3px solid transparent;
-        width: 90%;
+        border-bottom: 3px solid $color-primary;
+        width: 100%;
         display: block;
 
         &:focus {
@@ -73,12 +84,12 @@
             border-bottom: 3px solid $color-primary;
 
             &:invalid {
-                border-bottom: 3px solid $color-secondary;
+                border-bottom: 3px solid red;
             }
         }
 
         &::-webkit-input-placeholder {
-            color: $color-primary;
+            color: $color-secondary;
         }
     }
 
@@ -87,10 +98,10 @@
     }
 
     &__label {
-        font-size: 1.2rem;
+        font-size: 1.45rem;
         font-weight: 700;
-        margin-left: 2rem;
-        margin-top: .7rem;
+        margin-left: 1.5rem;
+        margin-top: 0.65rem;
         display: block;
         transition: all .3s;
         color: $color-primary;
@@ -102,42 +113,39 @@
         transform: translateY(-4rem);
     }
 
-    &__radio-input {
-        display: none;
-    }
-
-    &__radio-label {
-        font-size: 1.5rem;
-        cursor: pointer;
+    input[type="checkbox"] {
+        margin-right: 1rem;
+        top: 0.65rem;
         position: relative;
-        padding-left: 3rem;
-    }
-
-    &__radio-button {
+        width: 4rem;
         height: 2rem;
-        width: 2rem;
-        border: 3px solid $color-primary;
-        border-radius: 50%;
-        display: inline-block;
-        position: absolute;
-        left: 0;
-        top: -.1rem;
-
-        &::after {
-            content: '';
-            display: block;
-            height: 1.3rem;
-            width: 1.3rem;
-            border-radius: 50%;
-            position: absolute;
-            @include center-vertical;
-            background-color: $color-primary;
-            opacity: 0;
-            transition: opacity .2s;
-        }
+        -webkit-appearance: none;
+        appearance: none;
+        background: red;
+        outline: none;
+        border-radius: 2rem;
+        cursor: pointer;
+        box-shadow: inset 0 0 5px rgb(0, 0, 0);
     }
 
-    &__radio-input:checked~&__radio-label &__radio-button::after {
-        opacity: 1;
+    input[type="checkbox"]::before {
+        content: "";
+        width: 2rem;
+        height: 2rem;
+        border-radius: 50%;
+        background: $color-grey-light-1;
+        position: absolute;
+        top: 0;
+        left: 0;
+        transition: 0.5s;
+    }
+
+    input[type="checkbox"]:checked::before {
+        transform: translateX(100%);
+        background: #fff;
+    }
+
+    input[type="checkbox"]:checked {
+        background: $color-primary;
     }
 }
