--- a/src/components/Service/Service.scss
+++ b/src/components/Service/Service.scss
@@ -1,7 +1,7 @@
 @import "../../sass/base";
 
 .service {
-    &-text {
+    &__text {
         font-size: 1.4rem;
         color: $color-secondary;
         position: relative;
