--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -78,3 +78,7 @@ body {
 .mg-bottom-md {
     margin-bottom: 4rem !important;
 }
+
+.font-color-secondary {
+    color: $color-secondary !important;
+}
