--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -2,7 +2,6 @@
 
 .btn {
     background-color: $color-primary;
-    color: #fff;
     border: none;
     border-radius: 0;
     font-family: $font-display;
@@ -11,9 +10,13 @@
     padding: 1.5rem 3rem;
     cursor: pointer;
     transition: all .2s;
-    text-decoration: none;
 
     &:hover {
         background-color: $color-primary-dark;
+    }
+
+    a {
+        text-decoration: none;
+        color: #fff;
     }
 }
