--- a/src/components/Category/Category.scss
+++ b/src/components/Category/Category.scss
@@ -4,6 +4,10 @@
     overflow: hidden;
     height: 27.5rem;
 
+    a {
+        text-decoration: none;
+    }
+
     &__layer {
         position: absolute;
         background-color: rgba(248, 247, 216, .7);
