--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -6,6 +6,7 @@
     grid-column: full-start / full-end;
     grid-row: 7/ 8;
     padding: 8rem;
+    padding-bottom: 2rem;
 }
 
 .nav {
@@ -39,8 +40,17 @@
 
 .copyright {
     font-size: 1.4rem;
-    color: $color-grey-light-2;
-    margin: 5rem auto 0rem auto;
+    color: $color-primary;
+    margin: 7rem auto 0rem auto;
     text-align: center;
     width: 70%;
+
+    a {
+        color: $color-primary;
+        text-decoration: none;
+
+        &:hover {
+            text-decoration: underline;
+        }
+    }
 }
