--- a/src/pages/BuyProcessPage/BuyProcessPage.scss
+++ b/src/pages/BuyProcessPage/BuyProcessPage.scss
@@ -6,7 +6,7 @@
     display: grid;
     grid-template-rows: 87.5vh 1fr;
 
-    &--title {
+    &__title {
         grid-row: 1 / 2;
         background-color: $color-grey-dark-1;
         background-image: linear-gradient(rgba($color-secondary, .73), rgba($color-secondary, .73)), url(../../assets/images/gal-2.jpg);
@@ -29,7 +29,7 @@
         }
     }
 
-    &--guides {
+    &__guides {
         grid-row: 2 / 3;
         padding-left: 10rem;
         margin: 7.5rem 0rem;
@@ -54,13 +54,13 @@
         margin-bottom: 1rem;
     }
 
-    &-one {
+    &__one {
         padding-bottom: 3rem;
     }
 }
 
 .guides {
-    &--content {
+    &__content {
         display: grid;
         padding-left: 10rem;
         margin-top: 5rem;
@@ -68,7 +68,7 @@
         grid-template-columns: repeat(2, 1fr);
     }
 
-    &--text {
+    &__text {
         grid-row: 1 / 2;
         grid-column: 1 / 3;
         color: $color-primary;
@@ -77,12 +77,12 @@
         padding-bottom: 4.5rem;
     }
 
-    &--check {
+    &__check {
         color: $color-primary;
         font-size: 2.5rem;
     }
 
-    &--features {
+    &__features {
         grid-row: 2 / 3;
         grid-column: 1 / 3;
 
