--- a/src/pages/PropertiesPage/PropertiesPage.scss
+++ b/src/pages/PropertiesPage/PropertiesPage.scss
@@ -1,5 +1,30 @@
+@import "../../sass/base";
+
 .properties {
     &__positionB {
-        grid-row: 2 / 3;
+        grid-row: 2 / 4;
+        margin: 10rem 0;
     }
+
+    &__inputA {
+        grid-column: 1/ 4;
+        padding-left: 1rem;
+        width: 100%;
+        height: 5rem;
+        top: -2.5rem;
+        position: relative;
+    }
+
+    h2 {
+        grid-column: 1 / 4;
+    }
+}
+
+.pagination {
+    display: flex;
+    grid-column: 1 / 4;
+    font-size: 2.5rem;
+    color: $color-secondary;
+    cursor: pointer;
+    justify-content: center;
 }
