--- a/src/components/Category/Category.scss
+++ b/src/components/Category/Category.scss
@@ -43,6 +43,15 @@
             font-size: 1.6rem;
             font-weight: 100;
         }
+
+        @media only screen and(max-width: $bp-large) {
+            top: -23.5rem;
+        }
+
+        @media only screen and(max-width: $bp-medium) {
+            top: -30rem;
+            height: 5rem;
+        }
     }
 
     &__icon {
