--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,20 +1,34 @@
 @import "../../sass/base";
 
 .navbar {
-
     &__title {
         grid-row: 1 / 2;
         grid-column: 1 / 12;
-        z-index: 10;
-        display: grid;
-        opacity: .99;
         background-color: $color-secondary;
-        padding: 1.75rem;
-        height: 100%;
+        display: flex;
+        opacity: .99;
+        flex-direction: row;
+        align-content: center;
+        justify-content: center;
+        flex-wrap: wrap;
+
+        @media only screen and(max-width: $bp-medium) {
+            position: fixed;
+            width: 100%;
+            height: 10rem;
+            z-index: 1000;
+            opacity: 1;
+        }
+
     }
 
     &__logo {
         height: 4.75rem;
-        justify-self: center;
+
+        @media only screen and(max-width: $bp-medium) {
+            height: 5rem;
+        }
     }
+
+
 }
