--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -5,11 +5,15 @@
     background-color: $color-primary;
     z-index: 20;
     position: fixed;
-    height: 100vh;
+    height: 100%;
     width: 8rem;
     padding: 0rem 1.5rem;
     display: flex;
     flex-direction: column;
+
+    @media only screen and(max-width: $bp-medium) {
+        display: none;
+    }
 
     .logo {
         height: 5rem;
@@ -33,6 +37,8 @@
         text-align: center;
         margin-top: 2rem;
 
+        @media only screen and(max-width: $bp-medium) {}
+
         .icon {
             display: block;
             color: $color-secondary;
@@ -48,12 +54,6 @@
 
     }
 
-    @media only screen and(max-width: $bp-large) {
-        grid-column: 1 / -1;
-        grid-row: 1 / 2;
-        justify-content: flex-end;
-        align-items: center;
-    }
 }
 
 .nav-btn {
@@ -93,5 +93,153 @@
         &::after {
             transform: translateY(1rem);
         }
+    }
+}
+
+.dropdown {
+    display: none;
+
+    @media only screen and(max-width: $bp-medium) {
+        display: block;
+    }
+
+    &__checkbox {
+        display: none;
+    }
+
+    &__button {
+        background-color: $color-secondary;
+        height: 10rem;
+        width: 10rem;
+        position: fixed;
+        right: 0;
+        z-index: 2000;
+        box-shadow: 0 1rem 3rem rgba($color-secondary, .1);
+        text-align: center;
+        cursor: pointer;
+    }
+
+    &__background {
+        height: 10rem;
+        width: 10rem;
+        position: fixed;
+        right: 0;
+        border-radius: 10rem;
+        background-image: radial-gradient($color-secondary, rgba($color-secondary, .9));
+        z-index: 1000;
+        transition: transform .8s cubic-bezier(.86, 0, 0.7, 1);
+    }
+
+    &__nav {
+        height: 100vh;
+        position: fixed;
+        top: 0;
+        left: -15rem;
+        z-index: 1500;
+
+        opacity: 0;
+        width: 0;
+        transition: all .8s cubic-bezier(.68, -.55, .265, 1.55);
+    }
+
+    &__list {
+        position: absolute;
+        @include center-vertical;
+        list-style: none;
+        text-align: center;
+        width: 100%;
+    }
+
+    &__item {
+        margin: 1rem;
+    }
+
+    &__link {
+
+        &:link,
+        &:visited {
+            display: inline-block;
+            font-size: 2rem;
+            font-weight: bold;
+            padding: 1rem 4.5rem;
+            color: $color-primary;
+            text-decoration: none;
+            background-image: linear-gradient(120deg, transparent 0%, transparent 50%, $color-primary 50%);
+            background-size: 250%;
+            transition: all .4s
+        }
+
+        &:hover,
+        &:active {
+            background-position: 100%;
+            color: $color-secondary;
+            transform: translateX(-1rem)
+        }
+    }
+
+    &__checkbox:checked~&__background {
+        transform: scale(80);
+    }
+
+    &__checkbox:checked~&__nav {
+        opacity: 1;
+        width: 100%;
+        left: 0;
+    }
+
+    &__icon {
+        position: relative;
+        margin-top: 2.8rem;
+
+        @media only screen and(max-width: $bp-medium) {
+            margin-top: 4.5rem;
+        }
+
+        &,
+        &::before,
+        &::after {
+            background-color: $color-primary;
+            display: inline-block;
+            width: 3rem;
+            height: 2px;
+        }
+
+        &::before,
+        &::after {
+            content: '';
+            position: absolute;
+            left: 0;
+            transition: all .5s
+        }
+
+        &::before {
+            top: -1.25rem;
+        }
+
+        &::after {
+            top: 1.25rem;
+        }
+    }
+
+    &__button:hover &__icon:before {
+        top: -.8rem;
+    }
+
+    &__button:hover &__icon:after {
+        top: .9rem;
+    }
+
+    &__checkbox:checked+&__button &__icon {
+        background-color: transparent;
+    }
+
+    &__checkbox:checked+&__button &__icon:before {
+        top: 0;
+        transform: rotate(135deg)
+    }
+
+    &__checkbox:checked+&__button &__icon:after {
+        top: 0;
+        transform: rotate(-135deg)
     }
 }
