--- a/src/pages/PropertiesPage/PropertiesPage.scss
+++ b/src/pages/PropertiesPage/PropertiesPage.scss
@@ -4,6 +4,10 @@
     &__positionB {
         grid-row: 2 / 4;
         margin: 10rem 0;
+
+        @media only screen and(max-width: $bp-large) {
+            margin: 10rem 10rem;
+        }
     }
 
     &__inputA {
@@ -18,6 +22,7 @@
     h2 {
         grid-column: 1 / 4;
     }
+
 }
 
 .pagination {
