--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -20,10 +20,11 @@ $font-primary: 'Nirvana', sans-serif;
 $font-display: 'Josefin Sans', sans-serif;
 
 
-$bp-largest: 75em;
-$bp-large: 62.5em;
-$bp-medium: 50em;
-$bp-small: 37.5em;
+// RESPONSIVE BREAKPOINTS
+$bp-largest: 75em; // 1200px
+$bp-large: 62.5em; // 1000px
+$bp-medium: 50em; // 800px;
+$bp-small: 37.5em; // 600px;
 
 @mixin center-vertical {
     position: absolute;
@@ -62,12 +63,19 @@ body {
     grid-template-columns: [sidebar-start] 8rem [sidebar-end full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem)[col-end])[center-end] minmax(6rem, 1fr) [full-end];
 
     @media only screen and(max-width: $bp-large) {
-        grid-template-rows: 6rem 80vh min-content 40vw repeat(3, min-content);
-        grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem)[col-end])[center-end] minmax(6rem, 1fr) [full-end];
+        grid-template-rows: 10rem 87.5vh min-content 40vw repeat(3, min-content);
+        grid-template-columns: [full-start] minmax(8rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem)[col-end])[center-end] minmax(20rem, 1fr) [full-end];
     }
 
     @media only screen and(max-width: $bp-medium) {
-        grid-template-rows: 6rem calc(100vh - 6rem);
+        grid-template-rows: 10rem calc(100vh - 10rem);
+    }
+
+    &__B {
+        @media only screen and(max-width: $bp-large) {
+            grid-template-rows: 10rem 87.5vh min-content;
+            grid-template-columns: [full-start] minmax(8rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem)[col-end])[center-end] minmax(12.5rem, 1fr) [full-end];
+        }
     }
 }
 
