--- a/src/sections/GallerySection/GallerySection.scss
+++ b/src/sections/GallerySection/GallerySection.scss
@@ -12,6 +12,15 @@
     gap: 1.5rem;
     padding: 1.5rem;
 
+    @media only screen and(max-width: $bp-large) {
+        grid-column: 2 / 12;
+    }
+
+    @media only screen and(max-width: $bp-medium) {
+        grid-row: 7 / 8;
+        grid-column: 1 / 12;
+    }
+
     &__item {
         &--1 {
             grid-row: 1/3;
