--- a/src/sections/PropertiesSection/PropertiesSection.scss
+++ b/src/sections/PropertiesSection/PropertiesSection.scss
@@ -1,6 +1,12 @@
+@import "../../sass/base";
+
 .properties {
     &__position {
         grid-row: 5 / 6;
+
+        @media only screen and(max-width: $bp-medium) {
+            grid-row: 6 / 7
+        }
     }
 
     grid-column: center-start / center-end;
@@ -9,4 +15,14 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
     gap: 7rem;
+
+    @media only screen and(max-width: $bp-large) {
+        grid-column: 2 / 11;
+        margin: 12.5rem 5rem;
+    }
+
+    @media only screen and(max-width: $bp-medium) {
+        grid-column: 1 / 12;
+        margin: 12.5rem 10rem;
+    }
 }
