--- a/src/sections/RealtorsSection/RealtorsSection.scss
+++ b/src/sections/RealtorsSection/RealtorsSection.scss
@@ -4,7 +4,7 @@
 .realtors {
     background-color: $color-secondary;
     grid-column: col-start 8 / full-end;
-    grid-row: 2/3;
+    grid-row: 2 / 3;
     padding: 3rem;
     opacity: .9;
 
@@ -16,6 +16,7 @@
 
     @media only screen and(max-width: $bp-medium) {
         grid-column: 1 / -1;
+        grid-row: 3 / 4
     }
 
     &__list {
