--- a/src/sections/StorySection/StorySection.scss
+++ b/src/sections/StorySection/StorySection.scss
@@ -9,6 +9,11 @@
     grid-template-columns: [sidebar-start] 8rem [sidebar-end full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem)[col-end])[center-end] minmax(6rem, 1fr) [full-end];
     grid-template-rows: repeat(6, 1fr);
 
+    @media only screen and(max-width: $bp-medium) {
+        grid-template-rows: repeat(3, 1fr);
+        grid-row: 5 / 6
+    }
+
     &__pictures {
         background-color: $color-primary;
         grid-column: 2 / 7;
@@ -23,6 +28,7 @@
 
         @media only screen and(max-width: $bp-medium) {
             grid-column: 1 / -1;
+            grid-row: 1 / 3;
             padding: 6rem;
         }
     }
@@ -64,7 +70,7 @@
 
         @media only screen and(max-width: $bp-medium) {
             grid-column: 1 / -1;
-            grid-row: 5 / 6;
+            grid-row: 3 / 4;
         }
     }
 
