--- a/src/pages/AfterSalePage/AfterSalePage.scss
+++ b/src/pages/AfterSalePage/AfterSalePage.scss
@@ -21,9 +21,12 @@
     }
 
     &__content {
-        padding-left: 10rem;
         position: relative;
         margin: 7.5rem 0;
+
+        @media only screen and (max-width: $bp-medium) {
+            padding-left: 0rem;
+        }
     }
 }
 
