--- a/src/pages/ContactUsPage/ContactUsPage.scss
+++ b/src/pages/ContactUsPage/ContactUsPage.scss
@@ -28,6 +28,10 @@
         padding: 5rem 5rem 5rem 13rem;
         background-color: $color-secondary;
 
+        @media only screen and (max-width: $bp-medium) {
+            padding: 5rem;
+        }
+
         h2 {
             font-size: 3rem;
             text-align: center;
@@ -47,6 +51,10 @@
     .col-3 {
         width: 31%;
         display: inline-block;
+
+        @media only screen and (max-width: $bp-medium) {
+            width: 30%;
+        }
     }
 
     .col-6 {
