--- a/src/components/Category/Category.scss
+++ b/src/components/Category/Category.scss
@@ -4,6 +4,10 @@
     overflow: hidden;
     height: 27.5rem;
 
+    @media only screen and (max-width: $bp-small) {
+        height: 40rem;
+    }
+
     a {
         text-decoration: none;
     }
@@ -37,6 +41,7 @@
         display: flex;
         align-items: center;
 
+
         h3 {
             color: $color-grey-light-1;
             padding-left: 2rem;
@@ -44,13 +49,17 @@
             font-weight: 100;
         }
 
-        @media only screen and(max-width: $bp-large) {
+        @media only screen and (max-width: $bp-large) {
             top: -23.5rem;
         }
 
-        @media only screen and(max-width: $bp-medium) {
+        @media only screen and (max-width: $bp-medium) {
             top: -30rem;
             height: 5rem;
+        }
+
+        @media only screen and (max-width: $bp-small) {
+            top: -44.5rem;
         }
     }
 
