--- a/src/pages/AboutUsPage/AboutUsPage.scss
+++ b/src/pages/AboutUsPage/AboutUsPage.scss
@@ -31,7 +31,11 @@
         align-items: start;
     }
 
-    @media only screen and(max-width: $bp-large) {
+    @media only screen and (max-width: $bp-large) {
         grid-column: 3 / 10;
+    }
+
+    @media only screen and (max-width: $bp-medium) {
+        grid-row: 3 / 4
     }
 }
