--- a/src/pages/PropertiesPage/PropertiesPage.scss
+++ b/src/pages/PropertiesPage/PropertiesPage.scss
@@ -5,8 +5,18 @@
         grid-row: 2 / 4;
         margin: 10rem 0;
 
-        @media only screen and(max-width: $bp-large) {
+        @media only screen and (max-width: $bp-large) {
             margin: 10rem 10rem;
+        }
+
+        @media only screen and (max-width: $bp-medium) {
+            margin: 10rem 5rem;
+        }
+
+        @media only screen and (max-width: $bp-small) {
+            grid-column: 1 / 12;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
         }
     }
 
@@ -21,6 +31,10 @@
 
     h2 {
         grid-column: 1 / 4;
+
+        @media only screen and (max-width: $bp-small) {
+            display: none;
+        }
     }
 
 }
