--- a/src/sections/HeaderSection/HeaderSection.scss
+++ b/src/sections/HeaderSection/HeaderSection.scss
@@ -31,6 +31,10 @@
         @media only screen and (max-width: $bp-medium) {
             grid-column: 1 / -1;
         }
+
+        @media only screen and (max-width: $bp-smallest) {
+            padding: 7.5rem 3rem 4rem 3rem;
+        }
     }
 
     &__btn {
@@ -85,5 +89,12 @@
         height: 100%;
         width: 100%;
         object-fit: cover;
+
+        @media only screen and (max-width: $bp-smallest) {
+            width: 150%;
+            object-fit: fill;
+        }
     }
+
+
 }
