--- a/src/components/Property/Property.scss
+++ b/src/components/Property/Property.scss
@@ -8,6 +8,8 @@
     gap: 1.5rem;
     transition: .4s;
 
+    @media only screen and (max-width: $bp-small) {}
+
     &:hover {
         transform: scale(1.05);
     }
