--- a/src/pages/AboutUsPage/AboutUsPage.scss
+++ b/src/pages/AboutUsPage/AboutUsPage.scss
@@ -38,4 +38,11 @@
     @media only screen and (max-width: $bp-medium) {
         grid-row: 3 / 4
     }
+
+    @media only screen and (max-width: $bp-smallest) {
+        grid-column: 1 / 12;
+        display: flex;
+        flex-direction: column;
+        padding: 2rem;
+    }
 }
