--- a/src/pages/BuyProcessPage/BuyProcessPage.scss
+++ b/src/pages/BuyProcessPage/BuyProcessPage.scss
@@ -21,6 +21,10 @@
         grid-row-gap: 1.5rem;
         justify-content: center;
 
+        @media only screen and (max-width: $bp-smallest) {
+            padding: 2rem;
+        }
+
         h2 {
             text-align: center;
             padding-top: 14rem;
@@ -29,6 +33,11 @@
 
             @media only screen and (max-width: $bp-medium) {
                 padding-top: 10rem;
+            }
+
+            @media only screen and (max-width: $bp-small) {
+                padding-top: 7.5rem;
+                padding-bottom: 7.5rem;
             }
         }
 
@@ -40,17 +49,24 @@
         padding-left: 10rem;
         margin: 7.5rem 0rem;
 
-        h2 {
-            color: $color-secondary;
-            padding: 0 7.5rem;
-            text-align: center;
-
-        }
-
         @media only screen and (max-width: $bp-medium) {
             padding-left: 0rem;
         }
+
     }
+
+    h2 {
+        color: $color-secondary;
+        padding: 0 7.5rem;
+        text-align: center;
+
+        @media only screen and (max-width: $bp-smallest) {
+            padding: 0 1.5rem;
+        }
+
+    }
+
+
 }
 
 .step {
@@ -58,6 +74,10 @@
     font-size: 1.4rem;
     color: $color-grey-light-1;
     padding-left: 10rem;
+
+    @media only screen and (max-width: $bp-medium) {
+        padding-left: 0rem;
+    }
 
     h3 {
         font-size: 1.25rem;
@@ -76,6 +96,10 @@
         margin-top: 5rem;
         grid-template-rows: min-content 1fr;
         grid-template-columns: repeat(2, 1fr);
+
+        @media only screen and (max-width: $bp-smallest) {
+            padding: 0rem 3rem;
+        }
     }
 
     &__text {
@@ -85,6 +109,10 @@
         font-size: 1.6rem;
         padding-right: 10rem;
         padding-bottom: 4.5rem;
+
+        @media only screen and (max-width: $bp-smallest) {
+            padding-right: 0rem;
+        }
     }
 
     &__check {
@@ -101,6 +129,11 @@
             grid-template-columns: repeat(auto-fit, minmax(30%, 1fr));
             grid-gap: 4.5rem;
             align-items: start;
+        }
+
+        @media only screen and (max-width: $bp-smallest) {
+            grid-gap: 2.5rem;
+            grid-template-columns: repeat(auto-fit, minmax(50%, 1fr));
         }
     }
 }
