--- a/src/pages/ContactUsPage/ContactUsPage.scss
+++ b/src/pages/ContactUsPage/ContactUsPage.scss
@@ -32,6 +32,10 @@
             padding: 5rem;
         }
 
+        @media only screen and (max-width: $bp-smallest) {
+            padding: 5rem 2rem;
+        }
+
         h2 {
             font-size: 3rem;
             text-align: center;
@@ -39,6 +43,10 @@
             position: relative;
             left: -4rem;
             color: $color-primary;
+
+            @media only screen and (max-width: $bp-medium) {
+                left: 0rem;
+            }
         }
     }
 }
@@ -48,6 +56,10 @@
     border: solid 1px $color-primary;
     padding: 5rem;
 
+    @media only screen and (max-width: $bp-smallest) {
+        padding: 5rem 2rem;
+    }
+
     .col-3 {
         width: 31%;
         display: inline-block;
@@ -55,11 +67,27 @@
         @media only screen and (max-width: $bp-medium) {
             width: 30%;
         }
+
+        @media only screen and (max-width: $bp-small) {
+            width: 29%;
+        }
+
+        @media only screen and (max-width: $bp-smallest) {
+            width: 95%;
+        }
     }
 
     .col-6 {
         width: 47.25%;
         display: inline-block;
+
+        @media only screen and (max-width: $bp-small) {
+            width: 45%;
+        }
+
+        @media only screen and (max-width: $bp-smallest) {
+            width: 95%;
+        }
     }
 
     .col-12 {
@@ -105,6 +133,10 @@
 
     &__radio-group {
         margin-bottom: 1.75rem;
+
+        @media only screen and (max-width: $bp-smallest) {
+            font-size: 1.25rem;
+        }
     }
 
     &__label {
