--- a/src/pages/PropertiesPage/PropertiesPage.scss
+++ b/src/pages/PropertiesPage/PropertiesPage.scss
@@ -15,10 +15,18 @@
 
         @media only screen and (max-width: $bp-small) {
             grid-column: 1 / 12;
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            margin: 10rem 12.5rem;
+        }
+
+        @media only screen and (max-width: $bp-smallest) {
+            margin: 10rem 5rem;
         }
     }
+
 
     &__inputA {
         grid-column: 1/ 4;
@@ -31,10 +39,6 @@
 
     h2 {
         grid-column: 1 / 4;
-
-        @media only screen and (max-width: $bp-small) {
-            display: none;
-        }
     }
 
 }
