--- a/src/sass/_typography.scss
+++ b/src/sass/_typography.scss
@@ -8,6 +8,10 @@
     font-size: 4.5rem;
     color: $color-grey-light-1;
     line-height: 1;
+
+    @media only screen and (max-width: $bp-smallest) {
+        font-size: 3.75rem;
+    }
 }
 
 .heading-2 {
