--- a/src/sections/GallerySection/GallerySection.scss
+++ b/src/sections/GallerySection/GallerySection.scss
@@ -25,71 +25,133 @@
         &--1 {
             grid-row: 1/3;
             grid-column: 1/3;
+
+            @media only screen and (max-width: $bp-smallest) {
+                display: none;
+            }
         }
 
         &--2 {
             grid-row: 1/4;
             grid-column: 3/6;
+
+            @media only screen and (max-width: $bp-smallest) {
+                grid-row: 1 / 5;
+                grid-column: 1 / 6;
+            }
         }
 
         &--3 {
             grid-row: 1/3;
             grid-column: 6/7;
+
+            @media only screen and (max-width: $bp-smallest) {
+                display: none;
+            }
+
         }
 
         &--4 {
             grid-row: 1/3;
             grid-column: 7/9;
+
+            @media only screen and (max-width: $bp-smallest) {
+                grid-row: 1 / 3;
+                grid-column: 6 / 9;
+            }
         }
 
         &--5 {
             grid-row: 3/6;
             grid-column: 1/3;
+
+            @media only screen and (max-width: $bp-smallest) {
+                display: none;
+            }
         }
 
         &--6 {
             grid-row: 4/6;
             grid-column: 3/5;
+
+            @media only screen and (max-width: $bp-smallest) {
+                display: none;
+            }
         }
 
         &--7 {
             grid-row: 4/5;
             grid-column: 5/6;
+
+            @media only screen and (max-width: $bp-smallest) {
+                display: none;
+            }
         }
 
         &--8 {
             grid-row: 3/5;
             grid-column: 6/8;
+
+            @media only screen and (max-width: $bp-smallest) {
+                display: none;
+            }
         }
 
         &--9 {
             grid-row: 3/6;
             grid-column: 8/9;
+
+            @media only screen and (max-width: $bp-smallest) {
+                grid-row: 3 / 8;
+                grid-column: 6 / 9;
+            }
         }
 
         &--10 {
             grid-row: 6/8;
             grid-column: 1/2;
+
+            @media only screen and (max-width: $bp-smallest) {
+                display: none;
+            }
         }
 
         &--11 {
             grid-row: 6/8;
             grid-column: 2/4;
+
+            @media only screen and (max-width: $bp-smallest) {
+                display: none;
+            }
         }
 
         &--12 {
             grid-row: 6/8;
             grid-column: 4/5;
+
+            @media only screen and (max-width: $bp-smallest) {
+                display: none;
+            }
         }
 
         &--13 {
             grid-row: 5/8;
             grid-column: 5/8;
+
+            @media only screen and (max-width: $bp-smallest) {
+                grid-row: 4 / 8;
+                grid-column: 3 / 7;
+            }
         }
 
         &--14 {
             grid-row: 6/8;
             grid-column: 8/9;
+
+            @media only screen and (max-width: $bp-smallest) {
+                grid-row: 5 / 8;
+                grid-column: 1 / 4;
+            }
         }
     }
 
