--- a/src/sections/PropertiesSection/PropertiesSection.scss
+++ b/src/sections/PropertiesSection/PropertiesSection.scss
@@ -1,14 +1,6 @@
 @import "../../sass/base";
 
 .properties {
-    &__position {
-        grid-row: 5 / 6;
-
-        @media only screen and (max-width: $bp-medium) {
-            grid-row: 6 / 7
-        }
-    }
-
     grid-column: center-start / center-end;
     margin: 15rem 0;
 
@@ -25,4 +17,18 @@
         grid-column: 1 / 12;
         margin: 12.5rem 10rem;
     }
+
+    @media only screen and (max-width: $bp-smallest) {
+        margin: 12.5rem 5rem;
+    }
+
+    &__position {
+        grid-row: 5 / 6;
+
+        @media only screen and (max-width: $bp-medium) {
+            grid-row: 6 / 7
+        }
+    }
+
+
 }
