--- a/src/sections/StorySection/StorySection.scss
+++ b/src/sections/StorySection/StorySection.scss
@@ -14,6 +14,10 @@
         grid-row: 5 / 6
     }
 
+    @media only screen and (max-width: $bp-smallest) {
+        display: block;
+    }
+
     &__pictures {
         background-color: $color-primary;
         grid-column: 2 / 7;
