--- a/src/components/Filter/Filter.scss
+++ b/src/components/Filter/Filter.scss
@@ -15,8 +15,15 @@
 
         button {
             padding: 1rem;
+
+            @media only screen and (max-width: $bp-smallest) {
+                width: 80vw;
+                margin-top: .5rem;
+            }
         }
 
-
+        @media only screen and (max-width: $bp-smallest) {
+            flex-direction: column;
+        }
     }
 }
