--- a/src/pages/AfterSalePage/AfterSalePage.scss
+++ b/src/pages/AfterSalePage/AfterSalePage.scss
@@ -24,6 +24,10 @@
         position: relative;
         margin: 7.5rem 0;
         margin-left: 7rem;
+
+        @media only screen and (max-width: $bp-smallest) {
+            margin-left: 0rem;
+        }
     }
 }
 
